refact - downgrade java to 17